# easy-scsmodmanager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_DE.md  CONTRIBUTING.md  CONTRIBUTING_DE.md  ESCSMM-Dateien.md  ESCSMM-Fortschritt.md  README.md  README_DE.md  pyproject.toml
.github/workflows/: build-packages.yml  ci.yml  publish-release.yml
docs/de/: FAQ.md  KEYBOARD_SHORTCUTS.md  TIPS_AND_TRICKS.md  USER_MANUAL.md
docs/en/: FAQ.md  KEYBOARD_SHORTCUTS.md  TIPS_AND_TRICKS.md  USER_MANUAL.md
easy_scsmodmanager/: __init__.py  __main__.py  app.py
easy_scsmodmanager/cli/: scan.py
easy_scsmodmanager/core/: category_overrides.py  game_paths.py  game_version.py  load_order.py  mod_categories.py  settings_store.py  version_compat.py
easy_scsmodmanager/core/db/: scan_cache.py
easy_scsmodmanager/core/models/: mod_manifest.py
easy_scsmodmanager/integrations/scs/: content_category.py  file_listing.py  hashfs_extractor.py  hashfs_reader.py  mod_source.py  raw_zip_reader.py
easy_scsmodmanager/integrations/sii/: crypto.py  parser.py
easy_scsmodmanager/integrations/steam/: library_detector.py
easy_scsmodmanager/integrations/supabase/: share_api.py
easy_scsmodmanager/resources/i18n/: de.json  emoji.json  en.json  languages.json
easy_scsmodmanager/services/: conflict_detect.py  mod_identity.py  mod_matching.py  mod_scanner.py  mod_search.py  mod_share.py  mod_trash.py  profile_backup.py  profile_reader.py  profile_writer.py  scs_extractor.py
easy_scsmodmanager/ui/: main_window.py  mod_presenter.py  theme.py
easy_scsmodmanager/ui/controllers/: map_combo_controller.py  mod_share_controller.py  profile_backup_controller.py  workshop_fetch_controller.py
easy_scsmodmanager/ui/dialogs/: extract_dialog.py  mod_info_dialog.py  restore_backup_dialog.py  settings_dialog.py  share_create_dialog.py  share_import_dialog.py
easy_scsmodmanager/ui/menu/: main_menu.py
easy_scsmodmanager/ui/threads/: extract_thread.py  scan_thread.py  share_thread.py  workshop_fetch_thread.py
easy_scsmodmanager/ui/widgets/: active_mod_list.py  filter_toolbar.py  mod_card.py  mod_card_grid.py  profile_header.py  share_preview_widget.py
easy_scsmodmanager/utils/: i18n.py  logging_setup.py  win_registry.py
packaging/: SUPABASE_SETUP.md  supabase.sql
packaging/aur/: .SRCINFO  PKGBUILD
packaging/rpm/: build-rpm.sh  easy-scsmodmanager.spec
tests/: conftest.py
tests/ui/: test_main_window.py  test_threads_scan_progress.py  test_threads_share.py
tests/ui/test_controllers/: test_mod_share_controller.py
tests/ui/test_dialogs/: test_mod_info_dialog.py  test_restore_backup_dialog.py  test_settings_dialog.py  test_share_create_dialog.py  test_share_import_dialog.py
tests/ui/test_menu/: test_docs_menu.py  test_share_menu.py
tests/ui/test_widgets/: test_active_mod_list.py  test_active_mod_list_dnd.py  test_active_mod_list_spacers.py  (+4 more)
tests/unit/: test_app.py
(+39 files in other folders)
