[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-scsmodmanager"
version = "1.3.6"
description = "Cross-platform mod and profile manager for Euro Truck Simulator 2 and American Truck Simulator"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Switch-Bros" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "PyQt6>=6.6",
    "pycryptodome>=3.20",
    "vdf>=3.4",
    "httpx>=0.27",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pyinstaller>=6.5",
]

[project.scripts]
easy-scsmodmanager = "easy_scsmodmanager.__main__:main"

[project.urls]
Homepage = "https://github.com/Switch-Bros/easy-scsmodmanager"
Issues = "https://github.com/Switch-Bros/easy-scsmodmanager/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["easy_scsmodmanager*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
easy_scsmodmanager = [
    "resources/i18n/*.json",
    "resources/i18n/*/main.json",
    "resources/images/*",
    "resources/icons/*",
    "resources/fonts/*",
    "resources/screenshots/*",
    "resources/icon.png",
    "resources/icon.svg",
    "resources/icon.ico",
    "resources/*.desktop",
    "resources/*.metainfo.xml",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "SIM",             # simplify
]
ignore = [
    "E501",            # line length (black handles it)
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers"]
markers = [
    "integration: integration tests that need real SCS files",
    "slow: tests > 1s",
]

[tool.coverage.run]
source = ["easy_scsmodmanager"]
omit = ["*/tests/*", "*/__main__.py"]
